--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"> 
         <title>タンク</title> 
         <script type="text/javascript" src="js/enchant.js"></script> 
-        <script type="text/javascript" src="game01.js"></script> 
+        <script type="text/javascript" src="game.js"></script> 
         <style type="text/css"> 
             body {
                 margin: 0;
